--- a/1bash.template
+++ b/1bash.template
@@ -125,11 +125,11 @@ v0046="papampi;X22I, SUQA"
 v0047="papampi;Energi Algo, ENERGIMINER, NRG COIN"
 v0048="papampi;cuckaroo29 and cuckoo Algo"
 v0049="papampi;MTP Algo"
-
+v0050="papampi;cuckaroo31 Algo"
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.0" 
-nvOC_1bash_ver="0049"
+nvOC_1bash_ver="0050"
 nvOC_1bash_least_compatible="0034"
 nvOC_1bash_last_compatible="0035"
 
@@ -394,7 +394,7 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MTP MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKAROO31 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MTP MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
 
 
 BITCORE_COINS="BTX"
@@ -404,6 +404,7 @@ CRYPTONIGHTV8_COINS="XMR,MPH_CRYPTONIGHTV8,NICE_CRYPTONIGHTV8"
 CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CRYPTONIGHTHEAVY"
 CUCKOO_COINS="AE"
 CUCKAROO29_COINS="GRIN"
+CUCKAROO31_COINS="GRIN31"
 DECRED_COINS="DCR"
 ENERGI_COINS="NRG"
 EQUIHASH_COINS="ZEC,ZEN,HUSH,ZCL,BTCP,KMD,ZPOOL_EQUIHASH,MPH_EQUIHASH,NICE_EQUIHASH,VOTE,BTCP,BCI"
@@ -513,6 +514,10 @@ CRYPTONIGHTHEAVY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 # CUCKAROO29 
 CUCKAROO29_MINER="GMINER"
 CUCKAROO29_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+# CUCKAROO31 
+CUCKAROO31_MINER="GMINER"
+CUCKAROO31_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 # CUCKAOO 
 CUCKOO_MINER="GMINER"
@@ -1642,6 +1647,10 @@ CRYPTONIGHTHEAVY_MEMORY_OVERCLOCK=0      # Recommended value for some GTX-1060: 
 CUCKAROO29_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
 CUCKAROO29_CORE_OVERCLOCK=0                # Recommended value same as Equihash
 CUCKAROO29_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
+
+CUCKAROO31_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
+CUCKAROO31_CORE_OVERCLOCK=0                # Recommended value same as Equihash
+CUCKAROO31_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
 
 CUCKOO_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
 CUCKOO_CORE_OVERCLOCK=0                # Recommended value same as Equihash
