NiceHash GrinCuckatoo31 and GrinCuckaroo29

--- a/1bash.template
+++ b/1bash.template
@@ -403,8 +403,8 @@ CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
 CRYPTONIGHTV8_COINS="XMR,MPH_CRYPTONIGHTV8,NICE_CRYPTONIGHTV8"
 CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CRYPTONIGHTHEAVY"
 CUCKOO_COINS="AE"
-CUCKAROO29_COINS="GRIN"
-CUCKATOO31_COINS="GRIN31"
+CUCKAROO29_COINS="GRIN,NICE_CUCKAROO29"
+CUCKATOO31_COINS="GRIN31,NICE_CUCKATOO31"
 DECRED_COINS="DCR"
 ENERGI_COINS="NRG"
 EQUIHASH_COINS="ZEC,ZEN,HUSH,ZCL,BTCP,KMD,ZPOOL_EQUIHASH,MPH_EQUIHASH,NICE_EQUIHASH,VOTE,BTCP,BCI"
@@ -1309,6 +1309,19 @@ DUAL_COIN_POOL_PROTOCOL="blake2s"             #Dual Coin Supported algos: "blake
 ########################################################
 
 ## Nicehash autoconverts to BTC: ensure you update NICE_ADDRESS
+
+
+#NICE_CUCKAROO29
+NICE_CUCKAROO29_POOL="grincuckaroo29.eu.nicehash.com:3371"
+NICE_CUCKAROO29_PORT="3371"
+NICE_CUCKAROO29_WORKER="$WORKERNAME"
+NICE_CUCKAROO29_EXTENSION_ARGUMENTS=""
+
+#NICE_CUCKATOO31
+NICE_CUCKATOO31_POOL="grincuckatoo31.eu.nicehash.com:"
+NICE_CUCKATOO31_PORT="3372"
+NICE_CUCKATOO31_WORKER="$WORKERNAME"
+NICE_CUCKATOO31_EXTENSION_ARGUMENTS=""
 
 # NICE_ETHASH 
 NICE_ETHASH_POOL="daggerhashimoto.usa.nicehash.com"
