--- a/1bash.template
+++ b/1bash.template
@@ -858,6 +858,14 @@ GRIN_PORT="GRIN_PORT"
 GRIN_WORKER="$WORKERNAME"
 GRIN_POOL_PROTOCOL="stratum+tcp"
 
+# Grin31Coin (GRIN31)
+GRIN31_ADDRESS="replace_with_your_address"
+GRIN31_EXTENSION_ARGUMENTS=""
+GRIN31_POOL="GRIN_POOL"
+GRIN31_PORT="GRIN_PORT"
+GRIN31_WORKER="$WORKERNAME"
+GRIN31_POOL_PROTOCOL="stratum+tcp"
+
 #Ellaism (ELLA)
 ELLA_ADDRESS="replace_with_your_address"
 ELLA_EXTENSION_ARGUMENTS=""    
