--- a/1bash.template
+++ b/1bash.template
@@ -1326,7 +1326,7 @@ NICE_CUCKAROO29_WORKER="$WORKERNAME"
 NICE_CUCKAROO29_EXTENSION_ARGUMENTS=""
 
 #NICE_CUCKATOO31
-NICE_CUCKATOO31_POOL="grincuckatoo31.eu.nicehash.com:"
+NICE_CUCKATOO31_POOL="grincuckatoo31.eu.nicehash.com"
 NICE_CUCKATOO31_PORT="3372"
 NICE_CUCKATOO31_WORKER="$WORKERNAME"
 NICE_CUCKATOO31_EXTENSION_ARGUMENTS=""
