--- a/1bash.template
+++ b/1bash.template
@@ -271,6 +271,12 @@ LED_BRIGHTNESS=100          # 0 - 100 # Set the LED brightness intensity. 0 = OF
 
 MINER_WATCHDOG="YES"        # YES or NO # Monitors the rig and automatically corrects the detected problems. Highly recommended to use this!
 
+LOAD_CHECK="NO"             # Check system load average and reboot if HIGH_LOAD_REBOOT="YES", not works if using plusCPU 
+
+HIGH_LOAD_REBOOT="NO"       # YES or NO, Set to YES if you want watchdog reboot when all load averages (1 min, 5 min and 15 min) goes over double the CPU cores.
+                            # This option uses sysrq_reboot to reboot the rig.
+			    # Works only if not using plusCPU.
+			    
 SYSRQ_REBOOT="NO"           # YES or NO # Use sys request reboot or normal reboot. 
                             # Set "YES", watchdog and tempcontrol use sysrq reboot to prevent kernel panic and freeze if GPU drops off the bus
 
@@ -279,12 +285,6 @@ WATCHDOG_CYCLE="15"         # Time between watchdog cycle loops to check GPU uti
 WATCHDOG_USE_COLOR="NO"     # Watchdog log beautifier, use bold text and colors
 
 GPU_UTIL_THRESHOLD="70"     # GPU utilization threshold, If utilization bellow this value watchdog takes action (Recommended values 70-90) 
-
-LOAD_CHECK="NO"             # Check system load average and reboot if HIGH_LOAD_REBOOT="YES" 
-
-HIGH_LOAD_REBOOT="NO"       # YES or NO, Set to YES if you want watchdog reboot when all load averages (1 min, 5 min and 15 min) goes over double the CPU cores.
-                            # This option uses sysrq_reboot to reboot the rig.
-			    # Works only if not using plusCPU.
 
 ALT_POOL="NO"               # YES or NO, Set to YES if you want to enable  poolswitch. 
                             # Switch to alternate pool if main pool goes down.
