--- a/1bash.template
+++ b/1bash.template
@@ -131,11 +131,12 @@ v0050="papampi;Miner Schedule"
 v0051="papampi;MTP Algo"
 v0052="papampi;cuckaroo29, cuckoo, cuckatoo31 Algo"
 v0053="papampi;load average check"
+v0054="papampi;tempcontrol cycle"
 
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.1" 
-nvOC_1bash_ver="0053"
+nvOC_1bash_ver="0054"
 nvOC_1bash_least_compatible="0048"
 nvOC_1bash_last_compatible="0048"
 
@@ -359,6 +360,8 @@ TARGET_TEMP=65                # Set the desired global (all GPU's) target temper
 
 HOT_SHUTDOWN="NO"	      # YES or NO, if YES system will shutdown when SHUTDOWN_TEMP is exceeded.
 SHUTDOWN_TEMP=85	      # If HOT_SHUTDOWN is YES then the system will shutdown if this number is exceeded. (Celsius)
+
+TEMP_CONTROL_CYCLE="15"       # Time between Temp control cycle loops, max 30 seconds
 
 ALLOWED_TEMP_DIFF=2           # If current temp is 2C below the target temp reduce the fan speed. Works only if current temp is below target temp
 
