--- a/1bash.template
+++ b/1bash.template
@@ -133,11 +133,12 @@ v0052="papampi;cuckaroo29, cuckoo, cuckatoo31 Algo"
 v0053="papampi;load average check"
 v0054="papampi;tempcontrol cycle"
 v0055="papampi;x21s algo, RITO Coin"
+v0056="papampi;NICE_MTP"
 
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.1" 
-nvOC_1bash_ver="0055"
+nvOC_1bash_ver="0056"
 nvOC_1bash_least_compatible="0048"
 nvOC_1bash_last_compatible="0048"
 
@@ -447,7 +448,7 @@ HEX_COINS="XDNA"
 LBRY_COINS="LBC,ZPOOL_LBRY"
 LYRA2V2_COINS="MONA,VTC,NICE_LYRA2REV2,XVG,MPH_LYRA2V2,ZPOOL_LYRA2V2"
 LYRA2Z_COINS="MPH_LYRA2Z"
-MTP_COINS="XZC"
+MTP_COINS="XZC,NICE_MTP"
 MYR_GR_COINS="XMY,MPH_MYR_GR"
 NEOSCRYPT_COINS="FTC,ORB,PXC,VIVO,TZC,NICE_NEOSCRYPT,DSR,CRC,GBX,MPH_NEOSCRYPT,ZPOOL_NEOSCRYPT"
 PASCAL_COINS="PASC,PASL"
@@ -1417,9 +1418,16 @@ NICE_LYRA2REV2_WORKER="$WORKERNAME"
 NICE_LYRA2REV2_OPTS=""
 
 # NICE_NEOSCRYPT 
+NICE_MTP_ADDRESS="$NICE_ADDRESS"
+NICE_MTP_POOL="neoscrypt.eu.nicehash.com"
+NICE_MTP_PORT="3341"
+NICE_MTP_WORKER="$WORKERNAME"
+NICE_MTP_OPTS=""
+
+# NICE_NEOSCRYPT 
 NICE_NEOSCRYPT_ADDRESS="$NICE_ADDRESS"
-NICE_NEOSCRYPT_POOL="neoscrypt.eu.nicehash.com"
-NICE_NEOSCRYPT_PORT="3341"
+NICE_NEOSCRYPT_POOL="mtp.eu.nicehash.com"
+NICE_NEOSCRYPT_PORT="3374"
 NICE_NEOSCRYPT_WORKER="$WORKERNAME"
 NICE_NEOSCRYPT_OPTS=""
 
