NICE_MTP, Nice_Cuckatoo31 and Nice_Cuckaroo29

--- a/1bash.template
+++ b/1bash.template
@@ -133,7 +133,7 @@ v0052="papampi;cuckaroo29, cuckoo, cuckatoo31 Algo"
 v0053="papampi;load average check"
 v0054="papampi;tempcontrol cycle"
 v0055="papampi;x21s algo, RITO Coin"
-v0056="papampi;NICE_MTP"
+v0056="papampi;NICE_MTP, Nice_Cuckatoo31 and Nice_Cuckaroo29"
 
 
 # Do not edit these lines
@@ -437,8 +437,8 @@ CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
 CRYPTONIGHTV8_COINS="XMR,MPH_CRYPTONIGHTV8,NICE_CRYPTONIGHTV8"
 CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CRYPTONIGHTHEAVY"
 CUCKOO_COINS="AE"
-CUCKAROO29_COINS="GRIN"
-CUCKATOO31_COINS="GRIN31"
+CUCKAROO29_COINS="GRIN,NICE_CUCKAROO29"
+CUCKATOO31_COINS="GRIN31,NICE_CUCKATOO31"
 DECRED_COINS="DCR"
 ENERGI_COINS="NRG"
 EQUIHASH_COINS="ZEC,ZEN,HUSH,ZCL,BTCP,KMD,ZPOOL_EQUIHASH,MPH_EQUIHASH,NICE_EQUIHASH,VOTE,BTCP,BCI"
@@ -1367,6 +1367,21 @@ DUAL_COIN_POOL_PROTOCOL="blake2s"             #Dual Coin Supported algos: "blake
 ########################################################
 
 ## Nicehash autoconverts to BTC: ensure you update NICE_ADDRESS
+
+
+#NICE_CUCKAROO29
+NICE_CUCKAROO29_ADDRESS="$NICE_ADDRESS"
+NICE_CUCKAROO29_POOL="grincuckaroo29.eu.nicehash.com"
+NICE_CUCKAROO29_PORT="3371"
+NICE_CUCKAROO29_WORKER="$WORKERNAME"
+NICE_CUCKAROO29_OPTS=""
+
+#NICE_CUCKATOO31
+NICE_CUCKATOO31_ADDRESS="$NICE_ADDRESS"
+NICE_CUCKATOO31_POOL="grincuckatoo31.eu.nicehash.com"
+NICE_CUCKATOO31_PORT="3372"
+NICE_CUCKATOO31_WORKER="$WORKERNAME"
+NICE_CUCKATOO31_OPTS=""
 
 # NICE_CRYPTONIGHT
 NICE_CRYPTONIGHT_ADDRESS="$NICE_ADDRESS"
