--- a/1bash.template
+++ b/1bash.template
@@ -988,6 +988,14 @@ GRIN_PORT="GRIN_PORT"
 GRIN_WORKER="$WORKERNAME"
 GRIN_POOL_PROTOCOL="stratum+tcp"
 
+# Grin31Coin (GRIN31)
+GRIN31_ADDRESS="replace_with_your_address"
+GRIN31_OPTS=""
+GRIN31_POOL="GRIN_POOL"
+GRIN31_PORT="GRIN_PORT"
+GRIN31_WORKER="$WORKERNAME"
+GRIN31_POOL_PROTOCOL="stratum+tcp"
+
 # Groestl (GRS)
 GRS_ADDRESS="replace_with_your_address"
 GRS_OPTS=""
@@ -1375,6 +1383,7 @@ NICE_CUCKAROO29_POOL="grincuckaroo29.eu.nicehash.com"
 NICE_CUCKAROO29_PORT="3371"
 NICE_CUCKAROO29_WORKER="$WORKERNAME"
 NICE_CUCKAROO29_OPTS=""
+NICE_CUCKAROO29_POOL_PROTOCOL="stratum+tcp"  
 
 #NICE_CUCKATOO31
 NICE_CUCKATOO31_ADDRESS="$NICE_ADDRESS"
@@ -1382,6 +1391,7 @@ NICE_CUCKATOO31_POOL="grincuckatoo31.eu.nicehash.com"
 NICE_CUCKATOO31_PORT="3372"
 NICE_CUCKATOO31_WORKER="$WORKERNAME"
 NICE_CUCKATOO31_OPTS=""
+NICE_CUCKATOO31_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_CRYPTONIGHT
 NICE_CRYPTONIGHT_ADDRESS="$NICE_ADDRESS"
@@ -1389,6 +1399,7 @@ NICE_CRYPTONIGHT_POOL="cryptonight.eu.nicehash.com"
 NICE_CRYPTONIGHT_PORT="3355"
 NICE_CRYPTONIGHT_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHT_OPTS=""
+NICE_CRYPTONIGHT_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_CRYPTONIGHTV7
 NICE_CRYPTONIGHTV7_ADDRESS="$NICE_ADDRESS"
@@ -1396,6 +1407,7 @@ NICE_CRYPTONIGHTV7_POOL="cryptonightv7.eu.nicehash.com"
 NICE_CRYPTONIGHTV7_PORT="3363"
 NICE_CRYPTONIGHTV7_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHTV7_OPTS=""
+NICE_CRYPTONIGHTV7_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_CRYPTONIGHTV8
 NICE_CRYPTONIGHTV8_ADDRESS="$NICE_ADDRESS"
@@ -1403,12 +1415,14 @@ NICE_CRYPTONIGHTV8_POOL="cryptonightv8.eu.nicehash.com"
 NICE_CRYPTONIGHTV8_PORT="3367"
 NICE_CRYPTONIGHTV8_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHTV8_OPTS=""
+NICE_CRYPTONIGHTV8_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_CRYPTONIGHTNHEAVY
 NICE_CRYPTONIGHTNHEAVY_POOL="cryptonightheavy.eu.nicehash.com"
 NICE_CRYPTONIGHTNHEAVY_PORT="3364"
 NICE_CRYPTONIGHTNHEAVY_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHTNHEAVY_OPTS=""
+NICE_CRYPTONIGHTNHEAVY_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_EQUIHASH
 NICE_EQUIHASH_ADDRESS="$NICE_ADDRESS"
@@ -1416,6 +1430,7 @@ NICE_EQUIHASH_POOL="equihash.usa.nicehash.com"
 NICE_EQUIHASH_PORT="3357"
 NICE_EQUIHASH_WORKER="$WORKERNAME"
 NICE_EQUIHASH_OPTS=""
+NICE_EQUIHASH_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_ETHASH
 NICE_ETHASH_ADDRESS="$NICE_ADDRESS"
@@ -1423,7 +1438,7 @@ NICE_ETHASH_POOL="daggerhashimoto.usa.nicehash.com"
 NICE_ETHASH_PORT="3353"
 NICE_ETHASH_WORKER="$WORKERNAME"
 NICE_ETHASH_OPTS=""            # To mine with claymore add "-esm 3 -allpools 1 -estale 0"
-NICE_ETHASH_POOL_PROTOCOL=""  
+NICE_ETHASH_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_LYRA2REV2
 NICE_LYRA2REV2_ADDRESS="$NICE_ADDRESS"
@@ -1431,6 +1446,7 @@ NICE_LYRA2REV2_POOL="lyra2rev2.eu.nicehash.com"
 NICE_LYRA2REV2_PORT="3347"
 NICE_LYRA2REV2_WORKER="$WORKERNAME"
 NICE_LYRA2REV2_OPTS=""
+NICE_LYRA2REV2_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_NEOSCRYPT 
 NICE_MTP_ADDRESS="$NICE_ADDRESS"
@@ -1438,6 +1454,7 @@ NICE_MTP_POOL="neoscrypt.eu.nicehash.com"
 NICE_MTP_PORT="3341"
 NICE_MTP_WORKER="$WORKERNAME"
 NICE_MTP_OPTS=""
+NICE_MTP_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_NEOSCRYPT 
 NICE_NEOSCRYPT_ADDRESS="$NICE_ADDRESS"
@@ -1445,6 +1462,7 @@ NICE_NEOSCRYPT_POOL="mtp.eu.nicehash.com"
 NICE_NEOSCRYPT_PORT="3374"
 NICE_NEOSCRYPT_WORKER="$WORKERNAME"
 NICE_NEOSCRYPT_OPTS=""
+NICE_NEOSCRYPT_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_SKUNKHASH
 NICE_SKUNKHASH_ADDRESS="$NICE_ADDRESS"
@@ -1452,6 +1470,7 @@ NICE_SKUNKHASH_POOL="skunk.eu.nicehash.com"
 NICE_SKUNKHASH_PORT="3362"
 NICE_SKUNKHASH_WORKER="$WORKERNAME"
 NICE_SKUNKHASH_OPTS=""
+NICE_SKUNKHASH_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_X11GOST
 NICE_X11GOST_ADDRESS="$NICE_ADDRESS"
@@ -1459,6 +1478,7 @@ NICE_X11GOST_POOL="x11gost.eu.nicehash.com"
 NICE_X11GOST_PORT="3359"
 NICE_X11GOST_WORKER="$WORKERNAME"
 NICE_X11GOST_OPTS=""
+NICE_X11GOST_POOL_PROTOCOL="stratum+tcp"  
 
 # NICE_X16R
 NICE_X16R_ADDRESS="$NICE_ADDRESS"
@@ -1466,6 +1486,7 @@ NICE_X16R_POOL="x16r.eu.nicehash.com"
 NICE_X16R_PORT="3366"
 NICE_X16R_WORKER="$WORKERNAME"
 NICE_X16R_OPTS=""
+NICE_X16R_POOL_PROTOCOL="stratum+tcp"  
 
 # example, adding NICE_NEWALGO:
 #
@@ -1473,7 +1494,7 @@ NICE_X16R_OPTS=""
 #   NICE_NEWALGO_ADDRESS="$NICE_ADDRESS"
 #   NICE_NEWALGO_OPTS=""
 #   NICE_NEWALGO_POOL="newalgo.eu.nicehash.com"
-#   NICE_NEWALGO_PORT="4242"
+#   NICE_NEWALGO_PORT="newalgo port "
 #   NICE_NEWALGO_WORKER="$WORKERNAME"
 #   NICE_NEWALGO_POOL_PROTOCOL="stratum+tcp"
 #
