--- a/1bash.template
+++ b/1bash.template
@@ -134,11 +134,12 @@ v0053="papampi;load average check"
 v0054="papampi;tempcontrol cycle"
 v0055="papampi;x21s algo, RITO Coin"
 v0056="papampi;NICE_MTP, Nice_Cuckatoo31 and Nice_Cuckaroo29"
+v0057="papampi;Lyra2REv3"
 
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.1" 
-nvOC_1bash_ver="0056"
+nvOC_1bash_ver="0057"
 nvOC_1bash_least_compatible="0048"
 nvOC_1bash_last_compatible="0048"
 
@@ -429,7 +430,7 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKATOO31 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X21S X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKATOO31 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2REV3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X21S X22I XEVAN ZHASH"
 
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
@@ -447,6 +448,7 @@ GRS_COINS="GRS,MPH_GRS"
 HEX_COINS="XDNA"
 LBRY_COINS="LBC,ZPOOL_LBRY"
 LYRA2V2_COINS="MONA,VTC,NICE_LYRA2REV2,XVG,MPH_LYRA2V2,ZPOOL_LYRA2V2"
+LYRA2REV3_COINS="VTC,NICE_LYRA2REV3"
 LYRA2Z_COINS="MPH_LYRA2Z"
 MTP_COINS="XZC,NICE_MTP"
 MYR_GR_COINS="XMY,MPH_MYR_GR"
@@ -599,6 +601,11 @@ LBRY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 LYRA2V2_INTENSITY="1"
 LYRA2V2_MINER="CryptoDredge"
 LYRA2V2_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+## LYRA2REV3
+LYRA2REV3_INTENSITY="1"
+LYRA2REV3_MINER="CryptoDredge"
+LYRA2REV3_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## LYRA2Z
 LYRA2Z_INTENSITY="0"
@@ -1447,6 +1454,14 @@ NICE_LYRA2REV2_PORT="3347"
 NICE_LYRA2REV2_WORKER="$WORKERNAME"
 NICE_LYRA2REV2_OPTS=""
 NICE_LYRA2REV2_POOL_PROTOCOL="stratum+tcp"  
+
+# NICE_LYRA2REV3
+NICE_LYRA2REV3_ADDRESS="$NICE_ADDRESS"
+NICE_LYRA2REV3_POOL="lyra2rev3.eu.nicehash.com"
+NICE_LYRA2REV3_PORT="3373"
+NICE_LYRA2REV3_WORKER="$WORKERNAME"
+NICE_LYRA2REV3_OPTS=""
+NICE_LYRA2REV3_POOL_PROTOCOL="stratum+tcp" 
 
 # NICE_NEOSCRYPT 
 NICE_MTP_ADDRESS="$NICE_ADDRESS"
