--- a/1bash.template
+++ b/1bash.template
@@ -430,7 +430,7 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKATOO31 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2REV3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X21S X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKATOO31 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X21S X22I XEVAN ZHASH"
 
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
@@ -448,7 +448,7 @@ GRS_COINS="GRS,MPH_GRS"
 HEX_COINS="XDNA"
 LBRY_COINS="LBC,ZPOOL_LBRY"
 LYRA2V2_COINS="MONA,VTC,NICE_LYRA2REV2,XVG,MPH_LYRA2V2,ZPOOL_LYRA2V2"
-LYRA2REV3_COINS="VTC,NICE_LYRA2REV3"
+LYRA2RE3_COINS="VTC,NICE_LYRA2REV3"
 LYRA2Z_COINS="MPH_LYRA2Z"
 MTP_COINS="XZC,NICE_MTP"
 MYR_GR_COINS="XMY,MPH_MYR_GR"
@@ -603,9 +603,9 @@ LYRA2V2_MINER="CryptoDredge"
 LYRA2V2_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## LYRA2REV3
-LYRA2REV3_INTENSITY="1"
-LYRA2REV3_MINER="CryptoDredge"
-LYRA2REV3_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+LYRA2RE3_INTENSITY="1"
+LYRA2RE3_MINER="CryptoDredge"
+LYRA2RE3_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## LYRA2Z
 LYRA2Z_INTENSITY="0"
