--- a/1bash.template
+++ b/1bash.template
@@ -129,7 +129,7 @@ v0048="LuKePicci;Changes for brightskye's extended miner options handling"
 v0049="papampi;CryptoNightV8, X22I, SUQA, Energi Algo, ENERGIMINER, NRG COIN"
 v0050="papampi;Miner Schedule"
 v0051="papampi;MTP Algo"
-v0052="papampi;cuckaroo29, cuckoo, cuckatoo31 Algo"
+v0052="papampi;cuckaroo29, CuckooCycle, cuckatoo31 Algo"
 v0053="papampi;load average check"
 v0054="papampi;tempcontrol cycle"
 v0055="papampi;x21s algo, RITO Coin"
@@ -430,14 +430,14 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKATOO31 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X21S X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKATOO31 CUCKOOCYCLE DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X21S X22I XEVAN ZHASH"
 
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
 CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
 CRYPTONIGHTV8_COINS="XMR,MPH_CRYPTONIGHTV8,NICE_CRYPTONIGHTV8"
 CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CRYPTONIGHTHEAVY"
-CUCKOO_COINS="AE"
+CUCKOOCYCLE_COINS="AE"
 CUCKAROO29_COINS="GRIN,NICE_CUCKAROO29"
 CUCKATOO31_COINS="GRIN31,NICE_CUCKATOO31"
 DECRED_COINS="DCR"
@@ -557,8 +557,8 @@ CUCKATOO31_MINER="GMINER"
 CUCKATOO31_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 # CUCKAOO 
-CUCKOO_MINER="GMINER"
-CUCKOO_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+CUCKOOCYCLE_MINER="GMINER"
+CUCKOOCYCLE_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## Decred
 DCR_INTENSITY="0"
@@ -1813,9 +1813,9 @@ CUCKATOO31_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
 CUCKATOO31_CORE_OVERCLOCK=0                # Recommended value same as Equihash
 CUCKATOO31_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
 
-CUCKOO_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
-CUCKOO_CORE_OVERCLOCK=0                # Recommended value same as Equihash
-CUCKOO_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
+CUCKOOCYCLE_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
+CUCKOOCYCLE_CORE_OVERCLOCK=0                # Recommended value same as Equihash
+CUCKOOCYCLE_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
 
 # ENERGI
 ENERGI_POWERLIMIT_WATTS=100              # Same as Ethash
