--- a/1bash.template
+++ b/1bash.template
@@ -27,13 +27,13 @@
 # obm_dan:      Foreman monitoring integration
 #               ( BTC address: 1MGxnFDozG1UTKjxryNaiAAU7XkqWpEqK2 )
 
-# SizzlePizzle: Algo mining unification
-               
+# SizzlePizzle: Algo mining unification 
+#               ( BTC address: bc1qq42xn9zea933j88kv7u8xqeae84rr8f8lmlx55 )
+
 # Stubo:        ver 0019-2.0 (community release) main developer
 #               nvOC function script
 #               minerinfo script
 #               multiple bug fixes and enhacements for ver 0019-2.0
-
 
 # Original nvOC contributors (in alphabetical order):
 
