--- a/1bash.template
+++ b/1bash.template
@@ -563,7 +563,7 @@ CRYPTONIGHTHEAVY_INTENSITY="0"
 CRYPTONIGHTHEAVY_MINER="XMR_Stak"
 CRYPTONIGHTHEAVY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
-## CRYPTONIGH R
+## CRYPTONIGHT R
 CRYPTONIGHTR_INTENSITY="0"
 CRYPTONIGHTR_MINER="XMR_Stak"
 CRYPTONIGHTR_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
